<resources>
    <string name="app_name">Our Journal</string>
    <string name="test_title">The Tragedy of Darth Plagueis the Wise</string>
    <string name="test_content">It\'s not a story the Jedi would tell you. It\'s a Sith legend. Darth Plagueis was a Dark Lord of the Sith, so powerful and so wise he could use the Force to influence the midichlorians to create life… He had such a knowledge of the dark side that he could even keep the ones he cared about from dying. The dark side of the Force is a pathway to many abilities some consider to be unnatural. He became so powerful… the only thing he was afraid of was losing his power, which eventually, of course, he did. Unfortunately, he taught his apprentice everything he knew, then his apprentice killed him in his sleep. It\'s ironic he could save others from death, but not himself.</string>
    <string name="title_activity_login">Sign in</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Confirm Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_authentication_failed">Authentication Failed</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_connection_failed">Connection Failed</string>
    <string name="error_sign_in_failed">Sign In Failed</string>

    <string name="error_message_required">Required</string>
    <string name="email_address_hint">Email Address</string>
    <string name="link_partner_title">Link Partner</string>
    <string name="link_partner_question_title">Who do you want to share this Journal with?</string>
    <string name="preferences_file_key">com.razor.ourjournal.FIREBASE</string>
    <string name="shared_pref_key_partner_email">partner_email</string>
    <string name="share_button_text">SHARE</string>
    <string name="submit_post_button_text">Post</string>
    <string name="post_title">Add Post</string>
    <string name="post_title_text">Title</string>
    <string name="post_what_happened_text">What Happened?</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="timeline_title">Timeline</string>
    <string name="or">OR</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="error_message_too_short">Too short</string>

    <string name="facebook_app_id">279887969314389</string>
    <string name="facebook_application_id">279887969314389</string>
    <string name="fb_login_protocol_scheme">fb279887969314389</string>
    <string name="title_activity_settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="log_out_message">Do you wish to log out of Our Journal?</string>
    <string name="cancel">Cancel</string>
    <string name="attachments">Attachments</string>
    <string name="camera_permission_explanation">We require the CAMERA permission to use this feature.</string>
    <string name="request_permission">Request permission</string>
</resources>
