<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/default_16dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edtPostTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/post_title_text"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edtPostDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|start"
                android:hint="@string/post_what_happened_text"
                android:maxLines="10"
                android:minLines="5"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_16dp"
            style="@style/SmallHeadingText"
            android:text="@string/attachments"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/attachments_bar"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="@dimen/default_8dp"
            android:visibility="gone"/>

        <android.support.design.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarStyle"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/gallery_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?android:attr/buttonBarButtonStyle"
                    android:text="Gallery"/>

                <Button
                    android:id="@+id/camera_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    style="?android:attr/buttonBarButtonStyle"
                    android:text="Camera"/>

            </LinearLayout>

        </android.support.design.card.MaterialCardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_0dp"
            android:layout_weight="1"
            tools:ignore="InefficientWeight" />

        <Button
            android:id="@+id/btnPost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/default_4dp"
            android:background="@color/colorPrimary"
            android:text="@string/submit_post_button_text"
            android:textColor="@color/white"
            android:visibility="invisible" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progPost"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:visibility="gone"/>

</FrameLayout>